# project3-hopnbarley-store

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check-list  compose.yaml  pyproject.toml
config/: permissions.py  settings.py  urls.py
fixtures/: initial_data.json
orders/: admin.py  api.py  cart.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_user.py  0003_alter_order_options_alter_orderitem_options_and_more.py
orders/templates/orders/: cart_detail.html  checkout.html  checkout_success.html  order_detail.html
orders/templatetags/: orders_filters.py
products/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
products/fixtures/: initial_data.json
products/migrations/: 0001_initial.py  0002_review.py  0003_review_head_comment_alter_product_slug_and_more.py  0004_alter_product_image.py  0005_alter_category_slug.py
products/templates/products/: product-details.html  product-list.html
products/templatetags/: filters.py  products_filters.py
static/css/: main.css
static/js/: main.js
templates/: base.html  community.html  contact.html  faq.html  guides-recipes.html  license.html  resources.html
tests/: test_api_basic.py
users/: api.py  forms.py  mixins.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_address_user_city_alter_user_phone.py
users/templates/users/: account.html  base.html  login.html  register.html
