[tool.poetry]
name = "hopnbarley"
version = "0.1.0"
description = ""
authors = ["Katerina FuryGale@yandex.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2.5,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
django-filter = ">=25.1,<26.0"
django-cors-headers = ">=4.7.0,<5.0.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
drf-spectacular = ">=0.28.0,<0.29.0"
pillow = ">=11.3.0,<12.0.0"
pytest-django = ">=4.11.1,<5.0.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.4"  # Исправлено: убрано "django"
ipython = "^9.4.0"
django-extensions = "^4.1"
django-debug-toolbar = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"